Cambio link home

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             </div>
             <button class="btn btn-lg btn-primary btn-block mx-auto" type="submit">Cargar Documento</button>
          </form>
-         <p class="mt-5">Busca el bot en Telegram: <a href="https://web.telegram.org/#/im?p=@Docente_Bbot" target="_blank">@Docente_Bbot</a></p>
+         <p class="mt-5">Busca el bot en Telegram: <a href="http://t.me/Docente_Bbot" target="_blank">@Docente_Bbot</a></p>
          <p class="mb-3 text-muted">&copy; 2020 Binker Ezequiel - Universidad de Palermo</p>
       </div>
 
