--- a/templates/error.html
+++ b/templates/error.html
@@ -16,19 +16,13 @@
 
       <div class="container col-lg-3 col-xl-3 col-md-6 col-sm-12 form-group">
 
-         <img class="mb-4" src="https://i.ibb.co/Pcp0T6K/Whats-App-Image-2020-05-23-at-15-49-48.jpg" alt="Logo" width="150" height="150">
+         <img class="mb-5" src="https://i.ibb.co/Pcp0T6K/Whats-App-Image-2020-05-23-at-15-49-48.jpg" alt="Logo" width="150" height="150">
          <h2>BotDocente</h2>
-         <p>Carga un documento para sumarle conocimiento</p>
-
-         <form action="/uploader" method="POST" enctype = "multipart/form-data">
-            <input type= "file" class="form-control-file mt-3 mx-auto" required name = "file" />
-            <div class="mt-3 mb-3">
-            <label>
-               *Sólo se aceptan formatos .txt, .pdf o .pptx
-            </label>
-            </div>
-            <button class="btn btn-lg btn-primary btn-block mx-auto" type="submit">Cargar Documento</button>
-         </form>
+         
+         <p>Error en la carga del documento.</p>
+         <p class="text-danger">¡Tipo de archivo no válido!</p>
+         <p>Para cargar otro documento presione <a href="/">aquí</a></p>
+         
          <p class="mt-5">Busca el bot en Telegram: <a href="http://t.me/Docente_Bbot" target="_blank">@Docente_Bbot</a></p>
          <p class="mb-3 text-muted">&copy; 2020 Binker Ezequiel - Universidad de Palermo</p>
       </div>
